# gst-plugin-x170-1.0

./: AUTHORS  Makefile.in  README.md  aclocal.m4  configure  gst-plugin-x170-1.0-include-header-path.patch  gst-plugin-x170-1.0-timesys-fixes.patch
m4/: Makefile.in  as-version.m4
src/: Makefile.am  Makefile.in  gstx170.c  gstx170.h
